--- a/1-intro-react/index.html
+++ b/1-intro-react/index.html
@@ -6,10 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>React 🐤</h1>
-
-    <li>Intro React</li>
+  <h1>lista de temas clase 1🥴 </h1>
+  <ul>
+      <li>intro react</li>
+      <li>instalacion de react con vite</li>
+      <li>estructura de carpetas</li>
+      <li>componentes y JSX</li>
+  </ul>
     
 </body>
 </html>
