--- a/diseño wellness/curso5.html
+++ b/diseño wellness/curso5.html
@@ -95,7 +95,7 @@
   </div>
 
   <div class="text-center mt-4">
-    <a href="#" class="btn btn-custom">Finalizado</a>
+    <a href="final.html" class="btn btn-custom">Finalizado</a>
   </div>
 </div>
 
